--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ analytics:
 # Site Author
 author:
   name             : "Jinpeng"
-  avatar           : "/assets/avatar.jpg"
+  avatar           : "/assets/avatar.JPG"
   bio              : "Chemistry & Materials Science and Engineering"
   location         : "CUHHK(Shenzhen)"
   email            : "225015029@link.cuhk.edu.cn
