--- a/_config.yml
+++ b/_config.yml
@@ -117,8 +117,7 @@ author:
   avatar           : "/assets/avatar.JPG"
   bio              : "Chemistry & Materials Science and Engineering"
   location         : "CUHHK(Shenzhen)"
-  email            : "225015029@link.cuhk.edu.cn
-                      3041563591@qq.com"
+  email            : "jz359@outlook.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
