--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,6 +7,6 @@ main:
   - title: "生活记录"
     url: /life/
   - title: "关于我"
-    url: /about me/
+    url: /about/
   # - title: "Sitemap"
   #   url: /sitemap/
